[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT"

[workspace.dependencies]
apygen = { path = "crates/apygen" }
apygen_python_analysis = { path = "crates/apygen_python_analysis" }
apygen_cfg = { path = "crates/apygen_cfg" }
apygen_analysis = { path = "crates/apygen_analysis" }
apygen_finder = { path = "crates/apygen_finder" }

apy = { git = "https://github.com/apy-spec/apy-rs.git" }

ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }

clap = { version = "^4.5.60", features = ["derive"] }
imbl = "^7.0.0"
git2 = "^0.20.4"
rstest = "^0.26.1"
rayon = "^1.11.0"
ordered-float = "^5.1.0"
thiserror = "^2.0.18"
bitflags = { version = "^2.11.1" }
log = { version = "^0.4.29" }
env_logger = { version = "^0.11.10" }

[profile.release]
debug = true
