[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT"

[workspace.dependencies]
apygen = { path = "crates/apygen" }
apygen_python_analysis = { path = "crates/apygen_python_analysis" }
apygen_cfg = { path = "crates/apygen_cfg" }
apygen_constraint_builder = { path = "crates/apygen_constraint_builder" }
apygen_constraints = { path = "crates/apygen_constraints" }
apygen_converter = { path = "crates/apygen_converter" }
apygen_analysis = { path = "crates/apygen_analysis" }
apygen_analysis_derive = { path = "crates/apygen_analysis_derive" }
apygen_finder = { path = "crates/apygen_finder" }
apygen_graph = { path = "crates/apygen_graph" }
apygen_inference = { path = "crates/apygen_inference" }
apygen_primitives = { path = "crates/apygen_primitives" }

apy = { git = "https://github.com/apy-spec/apy-rs.git" }

ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }

clap = { version = "^4.5.60", features = ["derive"] }
imbl = "^7.0.0"
git2 = "^0.20.4"
rstest = "^0.26.1"
rayon = "^1.11.0"
thiserror = "^2.0.18"
bitflags = { version = "^2.11.1" }
log = { version = "^0.4.29" }
env_logger = { version = "^0.11.10" }
num-bigint = { version = "0.4.6" }
num-traits = { version = "0.2.19" }
num-rational = { version = "0.4.2" }
num-complex = { version = "0.4.6" }
indoc = { version = "2.0.7" }

criterion = { version = "0.8.2" }

syn = { version = "2.0.118" }
quote = { version = "1.0.46" }
proc-macro2 = { version = "1.0.106" }

[profile.release]
debug = true

[profile.test]
opt-level = 2
