[package]
name = "apygen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apygen_analysis = { workspace = true }
apygen_finder = { workspace = true }
apygen_constraint_builder = { workspace = true }
apygen_constraint_solver = { workspace = true }
apygen_converter = { workspace = true }
apy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
apy = { workspace = true, features = ["yaml"] }
rstest = { workspace = true }
indoc = { workspace = true }
