[package]
name = "apygen_analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rayon = { workspace = true }
log = { workspace = true }
imbl = { workspace = true }
apygen_analysis_derive = { workspace = true, optional = true }

[features]
derive = ["dep:apygen_analysis_derive"]
default = ["derive"]
