[package]
name = "apygen_constraint_builder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apygen_analysis = { workspace = true }
apygen_finder = { workspace = true }
apygen_cfg = { workspace = true }
apygen_constraint_graph = { workspace = true }
apygen_identifiers = { workspace = true }
apygen_primitives = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
imbl = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
indoc = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "build_builtins_constraint_graph"
harness = false
