[package]
name = "apygen_constraint_graph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apygen_analysis = { workspace = true }
apygen_primitives = { workspace = true }
apygen_graph = { workspace = true }
apygen_identifiers = { workspace = true }
apy = { workspace = true }
imbl = { workspace = true }
