[package]
name = "apygen_converter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apygen_analysis = { workspace = true }
apygen_constraint_graph = { workspace = true }
apygen_constraint_solver = { workspace = true }
apygen_inference = { workspace = true }
apygen_primitives = { workspace = true }
apy = { workspace = true }
rayon = { workspace = true }
imbl = { workspace = true }
log = { workspace = true }
