[package]
name = "apygen_converter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apygen_inference = { workspace = true }
apygen_constraint_graph = { workspace = true }
apy = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
