[package]
name = "apygen_finder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
git2 = { workspace = true, optional = true }
thiserror = { workspace = true }
rayon = { workspace = true }
apy = { workspace = true }

[features]
git = ["dep:git2"]
