[package]
name = "apygen_python_analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apygen_analysis = { workspace = true }
apygen_finder = { workspace = true }
apygen_cfg = { workspace = true }
apy = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
imbl = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-rational = { workspace = true }
num-complex = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
apy = { workspace = true, features = ["yaml"] }
rstest = { workspace = true }
indoc = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "builtins"
harness = false
