[package]
name = "apygen_python_analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apygen_analysis = { workspace = true }
apygen_finder = { workspace = true }
apygen_cfg = { workspace = true }
apygen_constraint_builder = { workspace = true }
apygen_constraints = { workspace = true }
apygen_inference = { workspace = true }
apygen_primitives = { workspace = true }
apy = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
imbl = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
apy = { workspace = true, features = ["yaml"] }
rstest = { workspace = true }
indoc = { workspace = true }
